# video-lesson-summarizer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
docker/: Dockerfile  docker-compose.cuda.yml  docker-compose.yml  healthcheck.py
packaging/: video_summarizer.spec
scripts/: extract_test_clip.sh  setup_ollama.ps1
tests/: conftest.py
tests/gpu/: test_transcribe_gpu.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_audio.py  test_checkpoint.py  test_checkpoint_v2.py  test_chunking.py  test_hierarchical.py  test_notes_schema.py  test_openrouter_models.py  test_retry.py  test_time_chunking.py
video_summarizer/: __init__.py  audio.py  checkpoint.py  cli.py  config.py  gui.py  runner.py  transcribe.py
video_summarizer/llm/: __init__.py  base.py  ollama.py  openai_compat.py  openrouter.py  retry.py
video_summarizer/summarize/: assemble.py  chunking.py  hierarchical.py  notes_schema.py  pipeline.py  prompts.py
