[project]
name = "video-summarizer"
version = "0.1.0"
description = "Extract audio from video, transcribe with Whisper, summarize with LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
]

[project.scripts]
video-summarizer = "video_summarizer.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["video_summarizer"]

[tool.pytest.ini_options]
markers = [
    "gpu: tests requiring NVIDIA GPU",
    "ffmpeg: tests requiring ffmpeg in PATH",
]
testpaths = ["tests"]
